Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9451

innodb_buffer_pool_populate does not seem to work on 10.1.10

    XMLWordPrintable

Details

    Description

      It seems that innodb_buffer_pool_populate stopped working in MariaDB 10.1.10, it does work properly in 10.1.9:

      MariaDB 10.1.9:

      # bin/mysqld --version
      bin/mysqld  Ver 10.1.9-MariaDB for Linux on x86_64 (MariaDB Server)
      # /etc/init.d/mysql-test1-1 restart; free -m; perl /tmp/numa-maps-summary.pl < /proc/$(pidof mysqld)/numa_maps
      Stopping MySQL database server: mysqld.
      Starting MySQL database server: mysqld.
                   total       used       free     shared    buffers     cached
      Mem:         24113      20301       3811          0          3         49
      -/+ buffers/cache:      20248       3864
      Swap:         3905          0       3905
      N0        :      2558892 (  9.76 GB)
      N1        :      2558471 (  9.76 GB)
      active    :         1355 (  0.01 GB)
      anon      :      5113825 ( 19.51 GB)
      dirty     :      5113825 ( 19.51 GB)
      mapmax    :          272 (  0.00 GB)
      mapped    :         3586 (  0.01 GB)

      MariaDB 10.1.10:

      # bin/mysqld --version
      bin/mysqld  Ver 10.1.10-MariaDB for Linux on x86_64 (MariaDB Server)
      # /etc/init.d/mysql-test1-1 restart; free -m; perl /tmp/numa-maps-summary.pl < /proc/$(pidof mysqld)/numa_maps
      Stopping MySQL database server: mysqld.
      Starting MySQL database server: mysqld.
                   total       used       free     shared    buffers     cached
      Mem:         24113       1829      22284          0          3         49
      -/+ buffers/cache:       1775      22337
      Swap:         3905          0       3905
      N0        :       199871 (  0.76 GB)
      N1        :       199523 (  0.76 GB)
      active    :         1296 (  0.00 GB)
      anon      :       395819 (  1.51 GB)
      dirty     :       395819 (  1.51 GB)
      mapmax    :          272 (  0.00 GB)
      mapped    :         3631 (  0.01 GB)

      mysql.cnf:

      [mysqld]
      innodb_buffer_pool_size = 18G
      innodb_buffer_pool_populate = 1

      Attachments

        Activity

          People

            marko Marko Mäkelä
            sysmonk aleksandr stankevic
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: